update schema to use proper image on SERP

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,15 @@
       rel="stylesheet"
     />
     <title>The Saric Wedding</title>
+    <script type="application/ld+json">
+      {
+        "@context": "http://schema.org",
+        "@type": "Wedding",
+        "name": "Saric Wedding",
+        "url": "https://www.saric.wedding",
+        "logo": "https://www.saric.wedding/us.jpg"
+      }
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
