updated schema type

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
     <script type="application/ld+json">
       {
         "@context": "http://schema.org",
+        "@type": "Event",
         "name": "Saric Wedding",
         "url": "https://www.saric.wedding",
         "logo": "https://www.saric.wedding/us.jpg"
