--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,16 @@
         "@type": "Event",
         "name": "Saric Wedding",
         "url": "https://www.saric.wedding",
-        "logo": "https://www.saric.wedding/us.jpg"
+        "image": "https://www.saric.wedding/us.jpg",
+        "location": "900 W Avon Rd, Rochester Hills, MI",
+        "startDate": "2020-09-06",
+        "endDate": "2020-09-06",
+        "description": "Sarah and Eric are getting married!",
+        "eventStatus": "offline",
+        "organizer": "Eric Blohm & Sarah Barker",
+        "offers": "None",
+        "performer": "Eric Blohm & Sarah Barker",
+        "eventStatus": "scheduled"
       }
     </script>
   </head>
