remove duplicate schema type

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
         "startDate": "2020-09-06",
         "endDate": "2020-09-06",
         "description": "Sarah and Eric are getting married!",
-        "eventStatus": "offline",
+        "eventAttendanceMode": "offline",
         "organizer": "Eric Blohm & Sarah Barker",
         "offers": "None",
         "performer": "Eric Blohm & Sarah Barker",
