--- a/public/index.html
+++ b/public/index.html
@@ -17,13 +17,21 @@
         "name": "Saric Wedding",
         "url": "https://www.saric.wedding",
         "image": "https://www.saric.wedding/us.jpg",
-        "location": "900 W Avon Rd, Rochester Hills, MI",
+        "location": {
+          "@type": "Place",
+          "address": {
+            "@type": "PostalAddress",
+            "streetAddress": ""900 W Avon Rd",
+            "addressLocality": "Rochester Hills",
+            "addressRegion": "MI",
+            "postalCode": "48307",
+          }
+        }
         "startDate": "2020-09-06",
         "endDate": "2020-09-06",
         "description": "Sarah and Eric are getting married!",
         "eventAttendanceMode": "offline",
         "organizer": "Eric Blohm & Sarah Barker",
-        "offers": "None",
         "performer": "Eric Blohm & Sarah Barker",
         "eventStatus": "scheduled"
       }
