remove extra quote

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
           "@type": "Place",
           "address": {
             "@type": "PostalAddress",
-            "streetAddress": ""900 W Avon Rd",
+            "streetAddress": "900 W Avon Rd",
             "addressLocality": "Rochester Hills",
             "addressRegion": "MI",
             "postalCode": "48307",
