fix missing comma in schema json

--- a/public/index.html
+++ b/public/index.html
@@ -24,9 +24,9 @@
             "streetAddress": "900 W Avon Rd",
             "addressLocality": "Rochester Hills",
             "addressRegion": "MI",
-            "postalCode": "48307",
+            "postalCode": "48307"
           }
-        }
+        },
         "startDate": "2020-09-06",
         "endDate": "2020-09-06",
         "description": "Sarah and Eric are getting married!",
